删除无用代码

--- a/components/calendar/calendar.wxml
+++ b/components/calendar/calendar.wxml
@@ -30,7 +30,7 @@
 	<!-- 日历主体 -->
 	<view class="flex-start flex-wrap calendar-main" style="height:{{dateList.length/7*72}}rpx">
 		<view wx:for="{{dateList}}" wx:key="dateList" class="day">
-			<view class="bg {{(item.year === selectDay.year && item.month === selectDay.month) ? (item.day === selectDay.day?'select':''): 'other-month'}}" catchtap="lookHuoDong" data-day="{{item.day}}" data-year="{{item.year}}" data-month="{{item.month}}" data-date-string="{{item.dateString}}">
+			<view class="bg {{(item.year === selectDay.year && item.month === selectDay.month) ? (item.day === selectDay.day?'select':''): 'other-month'}}" catchtap="selectChange" data-day="{{item.day}}" data-year="{{item.year}}" data-month="{{item.month}}" data-date-string="{{item.dateString}}">
 				{{item.day}}
 			</view>
 			<view class="spot" wx:if="{{item.spot}}"></view>
