--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,2 +1,3 @@
 <!--index.wxml-->
-<calendar bind:change="dateChange" spot="{{['2020/8/6','2020/8/9']}}"></calendar>
+<calendar bind:change="dateChange" spot="{{spot}}" defaultTime="2020/8/9"></calendar>
+<view class="date-string">当前选中的日期是：{{dateString}}</view>
