--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,11 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+page{
+  background-color: #f6f6f6;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+.date-string{
+  margin-top: 20rpx;
+  background-color: #fff;
+  font-size: 28rpx;
+  padding: 0 30rpx;
+  line-height: 60rpx;
 }
