重构：使用dayjs优化逻辑

--- a/components/calendar/calendar.wxml
+++ b/components/calendar/calendar.wxml
@@ -2,7 +2,7 @@
 <view class="calendar">
 	<view class="title flex">
 		<view class="flex">
-			<picker value="{{selectDay.year+'-'+selectDay.month}}" bindchange="editMonth" mode="date" fields="month" class="year-month">{{selectDay.year}}.{{selectDay.month>9?selectDay.month:"0"+selectDay.month}}</picker>
+			<picker value="{{selectDay.year+'-'+(selectDay.month+1)}}" bindchange="editMonth" mode="date" fields="month" class="year-month">{{selectDay.year}}.{{selectDay.month>8?selectDay.month+1:"0"+(selectDay.month+1)}}</picker>
 			<view class="icon" bindtap="lastMonth" style="transform:rotate(180deg);">
 				<view class="iconfont icon-playfill"></view>
 			</view>
@@ -12,7 +12,6 @@
 		</view>
 		<view catchtap="openChange" class="flex open">
 			<view>{{open?"收起":"展开"}}</view>
-			<view style="margin-left:6rpx;font-size:20rpx" class="iconfont icon-{{open?'fold':'unfold'}}"></view>
 		</view>
 	</view>
 
@@ -28,12 +27,16 @@
 	</view>
 
 	<!-- 日历主体 -->
-	<view class="flex-start flex-wrap calendar-main" style="height:{{dateList.length/7*72}}rpx">
-		<view wx:for="{{dateList}}" wx:key="dateList" class="day">
-			<view class="bg {{(item.year === selectDay.year && item.month === selectDay.month) ? (item.day === selectDay.day?'select':''): 'other-month'}}" catchtap="selectChange" data-day="{{item.day}}" data-year="{{item.year}}" data-month="{{item.month}}" data-date-string="{{item.dateString}}">
-				{{item.day}}
+	<view class="calendar-main">
+		<view class="date-group" style="height:{{open? dateList.length/7*72 : 72}}rpx;">
+			<view class="flex-start flex-wrap date-transform" style="transform: translateY({{open?0:-72*transform}}rpx);">
+				<view wx:for="{{dateList}}" wx:key="dateList" class="day">
+					<view class="bg {{(item.year === selectDay.year && item.month === selectDay.month) ?'': 'other-month'}} {{item.dateString === selectDay.dateString?'select':''}}" catchtap="selectChange" data-date="{{item.date}}" data-year="{{item.year}}" data-month="{{item.month}}" data-date-string="{{item.dateString}}">
+						{{item.date}}
+					</view>
+					<view class="spot" wx:if="{{item.spot}}"></view>
+				</view>
 			</view>
-			<view class="spot" wx:if="{{item.spot}}"></view>
 		</view>
 	</view>
 </view>
