--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,3 +1,3 @@
 <!--index.wxml-->
-<calendar bind:change="dateChange" spot="{{spot}}" defaultTime="2020/8/9"></calendar>
-<view class="date-string">当前选中的日期是：{{dateString}}</view>
+<calendar bind:dateChange="dateChange" spot="{{spot}}" defaultDate="2022/5/25"></calendar>
+<view class="date-string">当前选中的日期是：{{dateString}}</view> 
